# taxi-demand-predictor

./: .gitignore  pyproject.toml
.github/workflows/: feature_pipeline.yaml
notebooks/: 01-load-validate_raw_data.ipynb  02-transform_raw_data_into_ts.ipynb  03-transform_ts_data_into_features_and_targets.ipynb  04_transform_raw_data_into_features_and_targets.ipynb  05-visualize_training_data.ipynb  06-baseline_model.ipynb  07-xgboost_model.ipynb  08-lightgbm_model.ipynb  09-lightgbm_model_with_feature_engineering.ipynb  10-lightgbm_model_with_hyperparameter_tuning.ipynb  11-backfill_feature_store.ipynb  12_feature_pipeline.ipynb  13_model_training_pipeline.ipynb
src/: config.py  data.py  inference.py  paths.py  plot.py
