[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Humberto Nagato <humberto.nagatog@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "^2.0.3"
pyarrow = "^12.0.1"
tqdm = "^4.65.0"
plotly = "^5.15.0"
scikit-learn = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
